--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 
 	<br/>
-	There are various sections to lean more About Me with collaborating links to further explore.
+	There are various sections to learn more About Me with collaborating links to further explore.
 	Feel free to take a look at my <a href="https://www.linkedin.com/in/tamika-mckenzie/" target="_blank">LinkedIn Profile</a>
         and also my <a href="https://github.com/AmikaKenzie" target="_blank">GitHub</a> page that displays examples of my progressive coding skills.</p>
 
