--- a/skills.html
+++ b/skills.html
@@ -75,7 +75,7 @@
 
       <center><h1><u>What I offer</u></h1>
       <br/> 
-      <img src="https://lh3.googleusercontent.com/Do1jprCZSfYremoCe1AM0oDdZaKMh1AnpQgmsbiRQme6AVJR5v4d-IcEly7Pp7ir5iGQVQ=s85"></center>  
+      <img src="=/images/certification.png" alt="Cerification">></center>  
       <center><h1><u>CERTIFICATIONS</u></h1>
       <h4>Online- WHMIS 2016</h4>
       <h5>Centennial College- Automotive Basics 2016</h5>
