--- a/experiences.html
+++ b/experiences.html
@@ -68,7 +68,7 @@
 	
 	<p><b><u><h5>Automotive Service Installer 
 	 Canadian Tire Pit Stop | Scarborough ON  Nov 2016 – Jan 2017</h5></p></b></u>	
- 	 <center><img src="/images/canadian.png" alt="Canadian" height:"210" width="180"></center>
+ 	 <center><img src="amikakenzie.github.io/images/canadian.png" alt="Canadian" height:"210" width="180"></center>
          <center><img src=/images/auto.png" alt="Auto" height:"210" width="180"></center>
 	 <p>Provided strong customer service experience to all customers through effective hands on maintenance of vehicles 
 	 Daily maintenance of 5 cars per hour- checked fluids, wires, air vents, and battery levels 
