--- a/experiences.html
+++ b/experiences.html
@@ -68,8 +68,8 @@
 	
 	<p><b><u><h5>Automotive Service Installer 
 	 Canadian Tire Pit Stop | Scarborough ON  Nov 2016 – Jan 2017</h5></p></b></u>	
- 	 <center><img src="amikakenzie.github.io/images/canadian.png" alt="Canadian" height:"210" width="180"></center>
-         <center><img src=/images/auto.png" alt="Auto" height:"210" width="180"></center>
+ 	 <center><img src="../images/canadian.png" alt="Canadian" height:"210" width="180"></center>
+         <center><img src="../images/auto.png" alt="Auto" height:"210" width="180"></center>
 	 <p>Provided strong customer service experience to all customers through effective hands on maintenance of vehicles 
 	 Daily maintenance of 5 cars per hour- checked fluids, wires, air vents, and battery levels 
 	 Completed oil changes within 15 minutes 75% of time
@@ -79,8 +79,8 @@
 	<br/>
 
 	<p><b><u><h5>Dental Assistant Markham and Eglinton Dental | Scarborough ON  Feb 2012 - April 2014</h5></p></b></u>
-	<center><img src="/images/office.png" alt="Office" height:"180" width="150"></center>
-	<center><img src="/images/"dental.png" alt="Dental" height:"210" width="180"></center>
+	<center><img src="../images/office.png" alt="Office" height:"180" width="150"></center>
+	<center><img src="../images/"dental.png" alt="Dental" height:"210" width="180"></center>
 	<p>Guided patients for dental treatment by welcoming, comforting, seating, and draping which had an outcome of calming patients
 	 Prepared each examination room, tools and supplies with thorough sterilization to ensure the proper health and safety 
 	 Assisted dentist during procedures by filling cavities and performing extractions 
